--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,17 @@ jobs:
       - name: Install Inkscape
         run: sudo apt-get update && sudo apt-get install -y inkscape
 
+      - name: Install Japanese Fonts
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            fonts-noto-cjk \
+            fonts-noto-cjk-extra \
+            fonts-noto \
+            fonts-noto-mono \
+            fonts-noto-color-emoji \
+            fonts-poppins
+
       - name: Find and export SVGs to PDF
         run: |
           mkdir -p output
